# guanrank

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  guankrank_alg.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-24-add-tests.md  2026-05-24-ci-and-release-pipelines.md
docs/superpowers/specs/: 2026-05-24-add-tests-design.md  2026-05-24-ci-and-release-design.md
src/guanrank/: __init__.py
tests/: conftest.py  test_class_api.py  test_guanrank.py  test_kaplan_meier.py  test_normalization.py  test_rules.py
