[project]
name = "guanrank"
version = "0.1.2"
description = "GuanRank algorithm in Python"
readme = "README.md"
authors = [{ name = "d-laub", email = "dlaub@ucsd.edu" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "numba>=0.59",
]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[tool.ruff.lint]
extend-select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests are self-documenting by name; don't require docstrings on every test.
"tests/**" = ["D1"]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
major_version_zero = true

[tool.pyrefly]
project-includes = ["src"]
python-interpreter-path = ".pixi/envs/test/bin/python"
